# rdf_framework

./: CMakeLists.txt  README.md  gibuu_final_2_root.cxx  main.cxx  merge_plot.cxx
example/: CMakeLists.txt  genieTKI.cxx  genieTKI.json  genie_general.cxx  genie_kaon.cxx  genie_kaon.json  genie_pion.cxx  genie_pion.json  genie_proton.cxx  genie_proton.json  muon_p.cxx  muon_p.json  nuwroTKI.cxx  nuwrotoy.cxx  nuwrotoy.json  tki_general.cxx
example/GENIESingle/: CMakeLists.txt  geniesinglekin.cxx  geniesinglekin.json
example/JunoEDM/: CMakeLists.txt  SimHead.cxx  elec2hit.cxx  elec2hit.json  test.json
example/TKI/: CMakeLists.txt  genieTKI.cxx  genieTKI.json  nuwroTKI.cxx  nuwroTKI.json  tki_general.cxx
example/ganymede-reco/: CMakeLists.txt  event.cc  general_define.cc  genie2event.cc  nuwro2event.cc  plot.json  run.json  snapshot.json
example/ganymede-reco/include/: event.h
example/include/: genie_general.h  tki_general.h
example/nuwro_xsec/: CMakeLists.txt  nuwro_normalization.cxx  nuwro_normalization_from_raw.cxx  nuwro_xsec.cxx  nuwro_xsec.json  nuwro_xsec_from_raw.cxx  nuwro_xsec_raw.json
include/: analysis_steps.h  common.h  dlopen_wrap.h  env_handler.h  get_callable.h  hist_draw.h  wildcard_expand.h
src/: analysis_steps.cxx  dlopen_wrap.cxx  env_handler.cxx  get_callable.cxx  hist_draw.cxx  wildcard_expand.cxx
